Spacing for empty tags & fix anchor card styling

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -259,10 +259,12 @@ body {
 }
 .framework-item-stats-stars {
     display: inline-block;
+    color: rgb(50, 50, 50) !important;
 }
 .framework-item-stats-views {
     display: inline-block;
     float: right;
+    color: rgb(50, 50, 50) !important;
 }
 
 .framework-item-full {
